# solana-shooter

./: LICENSE  README.md  next.config.js  next.config.mjs  package.json  tsconfig.json
backend/: Anchor.toml  Cargo.toml  deploy.sh  package.json
backend/crates/commons/src/: constants.rs  utils.rs
backend/programs-ecs/components/bullets/: Cargo.toml
backend/programs-ecs/components/bullets/src/: lib.rs
backend/programs-ecs/components/enemies/: Cargo.toml
backend/programs-ecs/components/enemies/src/: lib.rs
backend/programs-ecs/components/map/: Cargo.toml
backend/programs-ecs/components/map/src/: bullet.rs  enemy.rs  lib.rs  player.rs  utils.rs  wave.rs
backend/programs-ecs/components/player/: Cargo.toml
backend/programs-ecs/components/player/src/: lib.rs
backend/programs-ecs/components/position/src/: lib.rs
backend/programs-ecs/systems/collider/: Cargo.toml
backend/programs-ecs/systems/collider/src/: lib.rs
backend/programs-ecs/systems/command/: Cargo.toml
backend/programs-ecs/systems/command/src/: lib.rs
backend/programs-ecs/systems/map-positions/: Cargo.toml
backend/programs-ecs/systems/map-positions/src/: lib.rs
backend/programs-ecs/systems/movement/: Cargo.toml
backend/programs-ecs/systems/movement/src/: lib.rs
backend/programs-ecs/systems/new-map/: Cargo.toml
backend/programs-ecs/systems/new-map/src/: lib.rs
backend/programs-ecs/systems/player-attack/: Cargo.toml
backend/programs-ecs/systems/player-attack/src/: lib.rs
backend/programs-ecs/systems/tick/: Cargo.toml
backend/programs-ecs/systems/tick/src/: lib.rs
backend/programs/backend/: Cargo.toml
backend/programs/backend/src/: lib.rs
backend/tests/: backend.ts
frontend/: .svgrrc.js  components.json  next.config.js  package.json  tailwind.config.ts
frontend/phaser3-rex-notes/plugins/: markedeventsheets-plugin.d.ts
frontend/src/components/: demo.tsx  loading-provider.tsx  magic-block-engine-provider.tsx  provider.tsx  spinner.tsx
frontend/src/game/: PhaserGame.tsx  main.ts
frontend/src/hooks/: use-telgram-mock.ts
frontend/src/libs/: connection.ts  honeycomb.ts  programs.ts  telegram.ts  worker.ts
frontend/src/pages/: _app.tsx  _document.tsx  play.tsx
frontend/src/programs/: backend.json  backend.ts  bullets.json  bullets.ts  collider.json  collider.ts  command.json  command.ts  enemies.json  enemies.ts  map.json  map.ts  map_positions.json  map_positions.ts  movement.json  movement.ts  new_map.json  new_map.ts  player.json  player.ts  player_attack.json  player_attack.ts  position.json  position.ts  tick.json  tick.ts  wave.json  wave.ts  wavesstate.json  wavesstate.ts  world.json
frontend/src/styles/: globals.scss
frontend/src/utils/: bolt.ts  index.ts
phaser3-rex-notes/plugins/: board-plugin.d.ts
phaser3-rex-notes/projects/mdscenario/: main.js
scripts/: copy-idl.js
src/components/: App.tsx
src/components/shadcn/: accordion.tsx  alert-dialog.tsx  breadcrumb.tsx  button.tsx  dialog.tsx  input.tsx  pagination.tsx  radio-group.tsx  separator.tsx  slider.tsx  switch.tsx  tabs.tsx  toggle.tsx  tooltip.tsx
src/game/: PhaserGame.tsx  main.ts
src/pages/: _app.tsx  game.tsx  index.tsx
src/styles/: globals.css
src/utils/: index.ts
(+102 files in other folders)
