[package]
name = "map"
version = "0.1.10"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "map"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
bolt-lang = { workspace = true }
anchor-lang = { workspace = true }
enemies = { path = "../enemies", features = ["cpi"] }
# player = { path = "../player", features = ["cpi"] }