[package]
name = "new-map"
version = "0.1.10"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "new_map"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
bolt-lang = { workspace = true }
anchor-lang = { workspace = true }
serde = { workspace = true }
map = { path = "../../components/map", features = ["cpi"] }